--- a/TestPage.html
+++ b/TestPage.html
@@ -1,12 +1,19 @@
+<!-- saved from url=(0014)about:internet -->
 <!DOCTYPE html>
 <html>
 <head>
-  <script type="text/javascript" src="testJava.js"></script>
+    <script type="text/javascript" src="qrc:/testJava.js">
+    function OnClick()
+    {
+        runNow();
+    }
+    </script>
 </head>
 <body>
 
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
+<a href="#" onclick="OnClick()">Click me</a>
 
 </body>
 </html>
